public/styles/style.css
@font-face {
    font-family: 'Lora'; /* A name to be used later */
    src: url('../fonts/Lora-VariableFont_wght.ttf'); /* URL to font */
}

.Animation:after {
    display: block;
    position: relative;
    width: 100%;
    color: var(--accent-clr);
    content: 'Environmental Sustainability';
    animation: Namechanger 5s infinite;
}

@-webkit-keyframes Namechanger {
    0% { content: 'Environmental Sustainability'; }
    40% { content: 'And are based Upon'; }
    75% { content: 'Sustainable Development Goals 7 and 13'; }
    100% { content: 'Environmental Sustainability'; }
}

.Intro-holder {
    height: 80vh;
    display: flex;
    flex-direction: row;
    justify-content: center;
    text-align: center;
}

.Intro-holder-inner {
    display: flex;
    flex-direction: column;
    justify-content: center;
}

:root {
    --bg-color: #FFF5EE;
    --text-color: #000000;
    --sec-clr: #F5F5F5;
    --accent-clr: #FF5722;
}

body {
    font-family: 'Lora', sans-serif;
    color: var(--text-color);
}

.Main-Page {
    height: 97vh;
    background-color: var(--sec-clr);
}

.Nav-bar {
    width: auto;
    font-size: large;
    display: flex;
    flex-direction: row;
    justify-content: space-around;
}

.Nav-bar-content {
    color: var(--text-color);
    width: auto;
    overflow: hidden;
    text-decoration: none;
    font-weight: 600;
    display: block;
}

.Nav-bar-content-holder {
    margin-top: 0%;
    text-decoration: none;
    display: block;
    text-align: center;
}

.Nav-bar-holder-r {
    display: none;
}

.Nav-bar-icon {
    opacity: 0;
}

@media only screen and (max-width: 600px) {
    .Home-Logo {
        height: 15vh;
    }
    .Nav-bar {
        display: none;
        height: 100vh;
        flex-direction: column;
        justify-content: space-around;
        position: sticky;
    }

    .Nav-bar-content-holder {
        display: flex;
        justify-content: center;
        font-size: 1rem;
        font-family: 'Lora', sans-serif;
        text-decoration: none;
        padding: 4%;
        margin-top: 0vh;
    }

    body {
        background-color: var(--bg-color);
    }

    .Nav-bar-icon {
        opacity: 100;
        color: #e6f3ff;
        position: relative;
        float: right;
        display: block;
        width: 20%;
        height: auto;
        background: none;
        border: none;
        z-index: 1;
    }

    .Nav-bar-icon-image {
        display: block;
        position: relative;
        height: 10vw;
        margin-top: 6%;
        z-index: 1;
    }

    .Intro-holder {
        height: 80vh;
        display: flex;
        flex-direction: row;
        justify-content: center;
        text-align: center;
    }

    .Intro-holder-inner {
        display: flex;
        flex-direction: column;
        justify-content: center;
    }
}

